2007-04-16 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
	* doctest imports pdb which imports readline, this means readline
	  can be imported when a dummy object has replaced stdout. The dummy 
	  might miss the encoding property. We now assume stdout.encoding=="ascii" 
	  in this case.
	
2007-04-14 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
	* Changing binding for control-delete to forward_delete_word, adding tests to verify binding
	

2007-04-11 
	* In revisions 2237-2239
	* Fix to setup.py for new package structure
	* add clear_history all the way to top_level. Patch provided by Aldarion

2007-03-15 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
	* Fix buggy get_begidx, get_endidx
	* Fix to ensure unicode strings can print something using the write_x methods on Console.

2007-03-06 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
	* Changed tests for ironpython
	* Added possibility to bind ctrl-c to a function
	* Refactor clipboard handling
	* Restructured example config file
	
2006-11-15 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
	* moved ironpython specifics from emacs.py->readline to a hook_wrapper
	  just as in the hookwrapper for the normal console.

2006-11-15 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
	* Rearranging pyreadlineconfig.ini
	
2006-11-13 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
	* Fixed bug in tab completion when point is not at end of line
	* Changed clr.AddReference to clr.AddReferenceToFileAndPath (ironpython_console)
	* Fix points position after tab completion
	* Fix for difference in handling of multiline input between cpython and ironpython (emacs.py)
	* added test_complete case to emacs_test.py
	* Ported changes to configuration/startup from trunk
	
2006-11-03 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
	* Improvements in ironpython handling.
	* Detection of ironpython explicit on sys.version instead of relying on presense of ctypes