@@ -82,3 +82,4 @@ history_filename("~/.pythonhistory")
 history_length(200) #value of -1 means no limit
 
 #set_mode("vi")  #will cause following bind_keys to bind to vi mode as well as activate vi mode
+#ctrl_c_tap_time_interval(0.3)
